--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 </head>
 <body>
 NTHU AnRuCheng
-hello im me
+<section>
+	<h4> Some bits about me </h4>
+	<p>
+		My name is Jocelyn, and I am a junior at TSingHua University, currently studying foreign language and literature. I set up this website as a sort of project for my bilingual web design class, I still haven’t fully decided yet what this website is going to look like, but I hope it will be a place for me to share and reflect on random ideas in my head.
+	</p>
+	<p>
+
+I am going to share a bit about myself. I grew up in Taipei and all my schools before university are within the same district, so home has always been my favorite safe place to be. However, I absolutely love travelling to different places, particularly places that are super far away. I suppose when you are too accustomed to one place, you start seeking for other places to call home. 
+     </p>
+     <p>
+I grew up loving to draw or paint on everything whenever I have free time, and when I say free time, it also includes very boring classes, so there is no textbook without any doodles on which from elementary school to high school. My favorite drawing method is academic drawing, which is a more structural approach to drawing. The reason why I chose to learn this method is, contrary to common belief, it has a definite answer –art do have right and wrong.
+      </p>
+      <p> 
+I also like reading classics, even though I have a love hate relationship towards it –they are filled with powerful words yet I am one of the slowest reader you will ever meet so some of the classics are simply too long for me to enjoy. I am currently learning how to write creatively, well, struggling to put my scattered thoughts into a complete paragraph is probably a more precise description. Anyway, words to me are like a refugee or an alternative world for the disturbed, and ultimately a provider of different ways we can view the world. Perhaps that’s why words are such powerful tools for me, but perhaps I don’t wish to know the reasons behind it.
+      </p>
+
 </body>
 </html>
