--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ NTHU AnRuCheng
 <section>
 	<h4> Some bits about me </h4>
 	<p>
-		My name is Jocelyn, and I am a junior at TSingHua University, currently studying foreign language and literature. I set up this website as a sort of project for my bilingual web design class, I still haven’t fully decided yet what this website is going to look like, but I hope it will be a place for me to share and reflect on random ideas in my head.
+		My name is Jocelyn, and I am a junior at TsingHua University, currently studying foreign language and literature. I set up this website as a sort of project for my bilingual web design class, I still haven’t fully decided yet what this website is going to look like, but I hope it will be a place for me to share and reflect on random ideas in my head.
 	</p>
 	<p>
 
