--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>jocelyncheng</title>
+<title>home</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="trial.css"> 
+<link rel="stylesheet" href="index.css"> 
 </head>
 <body>
 	 <nav>
