--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
            <div>Romanticism Art</div>
            <div>Modern Art</div>
        </nav>
-       <div id="container">Welcome to my website.</div>
+       <div id="container1">Welcome to my website.</div>
 
 
 </body>
