--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
+	<section class="banner"> 
+	<h2> GithubWebsite (will insert photo later on)</h2>
+</section>
+
 	 <nav>
-           <div><a href="home.html">Home</div>
-           <div><a href="bio.html">Bio</a></div>
-           <div>Renaissance Art</div>
-           <div>Romanticism Art</div>
-           <div>Modern Art</div>
+           <div><a href="trialhome.html">Home</a></div>
+           <div><a href="trialbio.html">Bio</a></div>
+           <div><a href="trialRenaissanceArt.html">Renaissance Art</a></div>
+           <div><a href="trialRomanticismArt.html">Romanticism Art</a></div>
+           <div><a href="trialModernArt">Modern Art</a></div>
        </nav>
+      
+
+      <div id="container">
+      	Welcom to my website! This is a website for sharing classical artworks from different eras. Hope you enjoy!
+      </div>
 
 </body>
 </html>
