--- a/home.html
+++ b/home.html
@@ -1,19 +1,30 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>home</title>
+<title>jocelyncheng</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
+	<section class="banner"> 
+	<h2> GithubWebsite (will insert photo later on)</h2>
+    </section>
 	 <nav>
            <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
-           <div>Renaissance Art</div>
-           <div>Romanticism Art</div>
-           <div>Modern Art</div>
+           <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
+           <div><a href="RomanticismArt.html">Romanticism Art</a></div>
+           <div><a href="ModernArt">Modern Art</a></div>
        </nav>
-
+<div id='home'>
+	<img src="ren.jpg" /width="400" height="400" > Renaissance Art
+</div>
+<div id='home2'>
+	<img src="rom.jpg" /width="400" height="400" > Romanticism Art
+</div>
+<div id='home3'>
+	<img src="scream.jpg" /width="400" height="400" > Modern Art
+</div>
 
 
 </body>
