--- a/home.html
+++ b/home.html
@@ -6,15 +6,15 @@
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-	<section class="banner"> 
+	<div class="banner"> 
 	<h2> GithubWebsite (will insert photo later on)</h2>
-    </section>
+    </div>
 	 <nav>
            <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
-           <div><a href="ModernArt">Modern Art</a></div>
+           <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
 <div id='home'>
 	<img src="ren.jpg" /width="400" height="400" > Renaissance Art
