--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </section>
 
 	 <nav>
-           <div><a href="trialhome.html">Home</a></div>
-           <div><a href="trialbio.html">Bio</a></div>
-           <div><a href="trialRenaissanceArt.html">Renaissance Art</a></div>
-           <div><a href="trialRomanticismArt.html">Romanticism Art</a></div>
-           <div><a href="trialModernArt">Modern Art</a></div>
+           <div><a href="home.html">Home</a></div>
+           <div><a href="bio.html">Bio</a></div>
+           <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
+           <div><a href="RomanticismArt.html">Romanticism Art</a></div>
+           <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
       
 
