--- a/ModernArt.html
+++ b/ModernArt.html
@@ -3,7 +3,7 @@
 <head>
 <title>jocelyncheng</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="trial.css"> 
+<link rel="stylesheet" href="index.css"> 
 </head>
 <body>
 	<section class="banner"> 
@@ -15,7 +15,7 @@
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
-           <div><a href="ModernArt">Modern Art</a></div>
+           <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
 <section id='modern'>
 	“Modern art has to be what is called ‘intense.’ it is not easy to define being intense; but, roughly speaking, it means saying only one thing at a time, and saying it wrong.” 
