--- a/home.html
+++ b/home.html
@@ -6,18 +6,9 @@
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-  <div class="banner"> 
-  <h2> GithubWebsite (will insert photo later on)</h2>
-    </div>
-    <div id='home'>
-  <img src="ren.jpg" /width="400" height="400" > Renaissance Art
-</div>
-<div id='home2'>
-  <img src="rom.jpg" /width="400" height="400" > Romanticism Art
-</div>
-<div id='home3'>
-  <img src="scream.jpg" /width="400" height="400" > Modern Art
-</div>
+	<section class="banner"> 
+	<h2> GithubWebsite (will insert photo later on)</h2>
+    </section>
 	 <nav>
            <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
@@ -25,7 +16,15 @@
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
-
+<div id='home'>
+	<img src="ren.jpg" /width="400" height="400" > Renaissance Art
+</div>
+<div id='home2'>
+	<img src="rom.jpg" /width="400" height="400" > Romanticism Art
+</div>
+<div id='home3'>
+	<img src="scream.jpg" /width="400" height="400" > Modern Art
+</div>
 
 
 </body>
