--- a/RomanticismArt.html
+++ b/RomanticismArt.html
@@ -3,7 +3,7 @@
 <head>
 <title>jocelyncheng</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="trial.css"> 
+<link rel="stylesheet" href="index.css"> 
 </head>
 <body>
 	<section class="banner"> 
@@ -14,7 +14,7 @@
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
-           <div><a href="ModernArt">Modern Art</a></div>
+           <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
 <section id='Romanticism'>
 	“Romanticism is the expression of man’s urge to rise above reason and common sense."
