--- a/thematic/index.html
+++ b/thematic/index.html
@@ -3,10 +3,25 @@
 <head>
 <title>jocelyncheng</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="index.css"> 
+
 </head>
 <body>
+	 <nav>
+           <div><a href="home.html">Home</a></div>
+           <div><a href="timeline.html">Time Line</a></div>
+           <div><a href="RenaissanceArtIntro.html">Renaissance Art Intro</a></div>
+           <div><a href="RenaissanceArtAnalysis.html">Renaissance Art Work Analysis</a></div>
+           <div><a href="RomanticismArtIntro.html">Romanticism Art Intro</a></div>
+           <div><a href="RomanticismArtAnalysis.html">Romanticism Art Work Analysis</a></div>
+           <div><a href="ModernArtIntro.html">Modern Art Intro</a></div>
+           <div><a href="ModernArtAnalysis.html">Modern Art Analysis</a></div>
+       </nav>
+
+    <div id='index'>
 	<h1>The topic for my thematic website</h1>
-	<p> The topic for my website will be to share some artworks and short literary works. The content will include the background and analysis of the art and literary works. They will be categorized by their genres and all the genres will be listed on the left of the website page. To make the website less boring, when clicking on each artwork,  memes that are related to those works will pop out.
+	<p> The topic for this website will is to introduce classical art from different eras. The content will include Renaissance Art, Romanticism Art, and Modern Art. I will first give an introduction on the unique features of the artworks from those eras, then I will choose a few iconic works to discuss more in depth. The discussion includes the basic information regarding the artworks, an close analysis, and my own intepretation towards them. 
 	</p>
+    </div>
 </body>
 </html>
