--- a/home.html
+++ b/home.html
@@ -16,16 +16,34 @@
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
-       
-    <div id='home'>
-  <img src="ren.jpg" /width="400" height="400" > Renaissance Art
-</div>
-<div id='home2'>
-  <img src="rom.jpg" /width="400" height="400" > Romanticism Art
-</div>
-<div id='home3'>
-  <img src="scream.jpg" /width="400" height="400" > Modern Art
-</div>
+
+      <section id="line"></section>
+       <h1>Anru Cheng</h1> 
+       <h3>Art for art's sake.</h3>
+
+      <div>
+         <img class="background" src="flot.JPG">
+      </div>
+
+      <div id="container">
+        Welcom to my website! This is a website for sharing classical artworks from different eras. Hope you enjoy!
+      </div>
+
+       <section id="line2"></section>
+       <div id="picture">
+         <a href="bio.html"><img src="bio.png" / width="320"></a>
+      </div>
+      <div id="picture2">
+         <a href="RenaissanceArt.html"><img src="bio2.png" / width="320"></a>
+       </div>
+      <div id="picture3">
+         <a href="RomanticismArt.html"><img src="bio3.png" / width="320"></a>
+       </div>
+
+       <div id="picture4">
+         <a href="ModernArt.html"><img src="bio4.png" / width="320"></a>
+       </div>
+
 	  
 
 
