--- a/index.html
+++ b/index.html
@@ -6,22 +6,48 @@
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-	<section class="banner"> 
-	<h2> GithubWebsite (will insert photo later on)</h2>
-</section>
-
-	 <nav>
+  <section class="banner"> 
+  <h2> GithubWebsite (will insert photo later on)</h2>
+    </section>
+      <nav>
            <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
-      
+
+      <section id="line"></section>
+       <h1>Anru Cheng</h1> 
+       <h3>Art for art's sake.</h3>
+
+      <div>
+         <img class="background" src="flot.JPG">
+      </div>
 
       <div id="container">
-      	Welcom to my website! This is a website for sharing classical artworks from different eras. Hope you enjoy!
+        Welcom to my website! This is a website for sharing classical artworks from different eras. Hope you enjoy!
       </div>
+
+       <section id="line2"></section>
+       <div id="picture">
+         <a href="bio.html"><img src="bio.png" / width="320"></a>
+      </div>
+      <div id="picture2">
+         <a href="RenaissanceArt.html"><img src="bio2.png" / width="320"></a>
+       </div>
+      <div id="picture3">
+         <a href="RomanticismArt.html"><img src="bio3.png" / width="320"></a>
+       </div>
+
+       <div id="picture4">
+         <a href="ModernArt.html"><img src="bio4.png" / width="320"></a>
+       </div>
+
+    
+
+
+
 
 </body>
 </html>
