--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
+           <div><a href="Others.html">Others</a></div>
        </nav>
 
       <section id="line"></section>
