--- a/ModernArt.html
+++ b/ModernArt.html
@@ -6,19 +6,44 @@
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-	<section class="banner"> 
-	<h2> GithubWebsite (will insert photo later on)</h2>
-</section>
-	 <nav>
+
+   <nav>
            <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
+           <div><a href="Others.html">Others</a></div>
        </nav>
-<section id='modern'>
-	“Modern art has to be what is called ‘intense.’ it is not easy to define being intense; but, roughly speaking, it means saying only one thing at a time, and saying it wrong.” 
-</section>
+<div id="ren">A SPIRIT OF EXPERIMENTATION</div>
+<h6>Modern Art</h6>
+<section style= "height:1vh; width:44vw ; background-color:#E72B7C;"></section>
+  <img class="background1" src="mod.png" >
+<section class="line"></section>
 
+<div class="ren3">
+<a href="modern1.html">
+  <section class="trans" style="width: 20vw"><img src="mod1.jpg" style="width: 100%"></section>
+  <section class="words" style="background-color: #F65C5C; width: 73.5vw" >
+    <p>Sunflower Noon <br>Sunflowers- Van Gogh</p> 
+    <p class="button" style= "background-color:  #F65C5C">learn more >></p>
+  </section>
+</a>
+</div>
+
+<div class="ren4" style="background-color: #083C2B">
+<a href="modern2.html">
+  <section class="trans1" style="width: 15vw;"><img src="mod2.jpg" style="width: 100%"></section>
+  <section class="words1" style="background-color: #083C2B ; color: white ; width: 70vw">
+    <p>Dancing with Light<br>The Milkmaid - Johannes Vermeer</p> 
+    <p class="button1"style="background-color: #083C2B ;color: white">learn more >></p>
+  </section>
+</a>
+</div>
+
+
+
+</body>
+</html>
 </body>
 </html>
