--- a/RenaissanceArt.html
+++ b/RenaissanceArt.html
@@ -6,19 +6,41 @@
 <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-	<section class="banner"> 
-	<h2> GithubWebsite (will insert photo later on)</h2>
-</section>
 	 <nav>
         <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
-     </nav>      
-<section id='Renaissance'>
-	“The true work of art is but a shadow of the divine perfection.”
-</section>
+           <div><a href="Others.html">Others</a></div>
+     </nav>
+<div id="ren">NATURE, INDIVIDUALS, AND CLASSICAL LEARNING</div>
+<h6>Renaissance Art</h6>
+<section class="line"></section>
+  <img class="background" src="ren2.png" >
+<section class="line"></section>
+
+<div class="ren3">
+<a href="renaissance2.html">
+  <section class="trans"><img src="n2.jpg" style="width: 100%"></section>
+  <section class="words">
+    <p>O Jesu Christe <br>Transfiguration - Raphael</p> 
+    <p class="button">learn more >></p>
+  </section>
+</a>
+</div>
+
+<div class="ren4">
+<a href="renaissance3.html">
+  <section class="trans1"><img src="n3.jpg" style="width: 100%"></section>
+  <section class="words1">
+    <p>From the Past to the Present<br>The School of Athens - Raphael</p> 
+    <p class="button1">learn more >></p>
+  </section>
+</a>
+</div>
+
+
 
 </body>
 </html>
