--- a/RomanticismArt.html
+++ b/RomanticismArt.html
@@ -15,9 +15,37 @@
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
+           <div><a href="Others.html">Others</a></div>
        </nav>
-<section id='Romanticism'>
-	“Romanticism is the expression of man’s urge to rise above reason and common sense."
-</section>
+<div id="ren">A REJECTION OF ORDER</div>
+<h6>Romanticism Art</h6>
+<section class="line1"></section>
+  <img class="background1" src="rom.png" >
+<section class="line"></section>
+
+<div class="ren3">
+<a href="romanticism1.html">
+  <section class="trans" style="width: 32vw"><img src="rom1.jpg" style="width: 100%"></section>
+  <section class="words" style="background-color: #08212E; width: 61vw;" >
+    <p style="color: white">Dream a dream Here's a scene <br>Wanderer above the Sea of Fog- Caspar David Friedrich</p> 
+    <p class="button" style="color: white ; background-color:  #08212E">learn more >></p>
+  </section>
+</a>
+</div>
+
+<div class="ren4" style="background-color: #9AB7B7">
+<a href="romanticism2.html">
+  <section class="trans1rom"><img src="rom3.jpg" style="width: 100%"></section>
+  <section class="words1" style="background-color: #9AB7B7 ; color: #490120 ; width: 70vw">
+    <p>Sweet as Rose, then Sweeter<br>the soul of the rose - John William Waterhouse </p> 
+    <p class="button1"style="background-color: #9AB7B7">learn more >></p>
+  </section>
+</a>
+</div>
+
+
+
+</body>
+</html>
 </body>
 </html>
