--- a/Others.html
+++ b/Others.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+<title>jocelyncheng</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="index.css"> 
+</head>
+<body>
+	 <nav>
+        <div><a href="home.html">Home</a></div>
+           <div><a href="bio.html">Bio</a></div>
+           <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
+           <div><a href="RomanticismArt.html">Romanticism Art</a></div>
+           <div><a href="ModernArt.html">Modern Art</a></div>
+           <div><a href="Others.html">Others</a></div>
+     </nav>
+ <div id="others"> <!--含標題和圖片的div-->
+ 	<section id="titleo"> 
+ 	<h8>Just</h8> <!--標題-->
+ 	for a laugh!
+    </section>
+    <section id="pic0">  <!--圖片-->
+    	<img src="o1.jpg" style="width: 100%">
+    </section>
+ </div>
+ <section class="line" style="margin-top: 0.5vh;"></section>
+<div id="o2"><img src="o3.jpg" style="width: 100%"></div>
+</body>
+</html>
