--- a/RenaissanceArt.html
+++ b/RenaissanceArt.html
@@ -22,7 +22,7 @@
 
 <div class="ren3">
 <a href="renaissance2.html">
-  <section class="trans"><img src="n2.jpg" style="width: 100%"></section>
+  <section class="trans"><img src="n2.jpg"></section>
   <section class="words">
     <p>O Jesu Christe <br>Transfiguration - Raphael</p> 
     <p class="button">learn more >></p>
