--- a/renaissance2.html
+++ b/renaissance2.html
@@ -23,6 +23,7 @@
 	<p>Year: 1516–20</p>
 	<p>
 		In the upper half of this work, Jesus is floating above a hill in the clouds. the bottom half of it, is a crowd gesturing towards Jesus. The two halfs of this painting contrasts with each other, for the upper part is bright, while the bottom part is in the dark. From my personal experience of struggling to follow the classical ways of drawing, I learned that bringing light to a canvas is very hard. For example, in this painting, Raphael did not just paint the upper part with brighter colors to show its light, but made every single corners of the painting reflect the light, such as the clothing of the crowd. Through the reflecting of light, can our eyes believe Jesus is floating in the light. I am therefore very impressed by this work, and the only thing I find problem with is position of Jesus's arms. Of all the majestic gestures to choose from, Raphael chose this position, which I think is a bit awkward.
+		畫作的上半部分，是描繪耶穌的降臨，至於畫作的下半部分則是民眾們看向耶穌。上下兩部分彼此呈強烈對比，而這個效果並非只需要用明暗顏色區分即可，而是需要在畫作的每個角落都繪有光的反射，像畫中人的衣服都反射出光線。但這個畫作最令我印象深刻的是，拉斐爾有很多種耶穌降臨的姿勢可以選擇來畫，但他最終選擇的是一個偏有點滑稽的動作。
 
 	</p>
 </section>
