--- a/RenaissanceArt.html
+++ b/RenaissanceArt.html
@@ -17,12 +17,12 @@
 <div id="ren">NATURE, INDIVIDUALS, AND CLASSICAL LEARNING</div>
 <h6>Renaissance Art</h6>
 <section class="line"></section>
-  <img class="background" src="ren2.png" >
+  <img class="background" src="ren2.jpg" >
 <section class="line"></section>
 
 <div class="ren3">
 <a href="renaissance2.html">
-  <section class="trans"><img src="n2.jpg"></section>
+  <section class="trans"><img src="n .jpg" style="width: 100%;"></section>
   <section class="words">
     <p>O Jesu Christe <br>Transfiguration - Raphael</p> 
     <p class="button">learn more >></p>
