--- a/ModernArt.html
+++ b/ModernArt.html
@@ -18,7 +18,7 @@
 <div id="ren">A SPIRIT OF EXPERIMENTATION</div>
 <h6>Modern Art</h6>
 <section style= "height:1vh; width:44vw ; background-color:#E72B7C;"></section>
-  <img class="background1" src="mod.png" >
+  <img class="background1" src="mod.jpg" >
 <section class="line"></section>
 
 <div class="ren3">
