--- a/Others.html
+++ b/Others.html
@@ -20,10 +20,10 @@
  	for a laugh!
     </section>
     <section id="pic0">  <!--圖片-->
-    	<img src="o1.jpg" style="width: 100%">
+    	<img src="o1-2-2.jpg" style="width: 100%">
     </section>
  </div>
  <section class="line" style="margin-top: 0.5vh;"></section>
-<div id="o2"><img src="o3.jpg" style="width: 100%"></div>
+<div id="o2"><img src="o3-2-2.jpg" style="width: 100%"></div>
 </body>
 </html>
