--- a/RomanticismArt.html
+++ b/RomanticismArt.html
@@ -20,7 +20,7 @@
 <div id="ren">A REJECTION OF ORDER</div>
 <h6>Romanticism Art</h6>
 <section class="line1"></section>
-  <img class="background1" src="rom.png" >
+  <img class="background1" src="romn.png" >
 <section class="line"></section>
 
 <div class="ren3">
